# name: test_create[uvloop-None]
  <class 'dict'> {
    'id': 'test',
    'name': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_find[uvloop]
  <class 'list'> [
    <class 'dict'> {
      'id': 'musicians',
      'name': 'musicians',
    },
    <class 'dict'> {
      'id': 'hydrogeologists',
      'name': 'hydrogeologists',
    },
  ]
---
# name: test_get[uvloop-200]
  <class 'dict'> {
    'id': 'musicians',
    'name': 'musicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'handle': 'qtaylor',
        'id': 'bf1b993c',
      },
    ],
  }
---
# name: test_get[uvloop-404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[uvloop-404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  ]
---
# name: test_remove[uvloop-None][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  ]
---
# name: test_update[uvloop-name][db_groups]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'name': 'Initial',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'foo',
      'name': 'Techs',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  ]
---
# name: test_update[uvloop-name][db_users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
# name: test_update[uvloop-name][json]
  <class 'dict'> {
    'id': 'foo',
    'name': 'Techs',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_update[uvloop-name_permissions][db_groups]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'name': 'Initial',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'foo',
      'name': 'Techs',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  ]
---
# name: test_update[uvloop-name_permissions][db_users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
# name: test_update[uvloop-name_permissions][json]
  <class 'dict'> {
    'id': 'foo',
    'name': 'Techs',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_update[uvloop-not_found][db_groups]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'name': 'Initial',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'foo',
      'name': 'Initial',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  ]
---
# name: test_update[uvloop-not_found][db_users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
# name: test_update[uvloop-not_found][json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_update[uvloop-permissions][db_groups]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'name': 'Initial',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'foo',
      'name': 'Initial',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  ]
---
# name: test_update[uvloop-permissions][db_users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'administrator': True,
      'api_keys': <class 'list'> [
      ],
      'force_reset': False,
      'groups': <class 'list'> [
      ],
      'handle': 'bob',
      'invalidate_sessions': False,
      'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
      'password': b'$2b$12$0aC1WPkTG.up/KQb3KcQVOMkMbThtjMMrFfG5tiILY2cUMVcnEW0.',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technician',
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      '_id': '7CtBo2yG',
      'administrator': False,
      'created_at': datetime.datetime(1975, 6, 18, 13, 59, 8),
      'groups': <class 'list'> [
        'test',
      ],
      'handle': 'leeashley',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'leeashley',
    },
    <class 'dict'> {
      '_id': 'LB1U6zCj',
      'administrator': False,
      'created_at': datetime.datetime(2022, 3, 21, 13, 6, 59),
      'groups': <class 'list'> [
      ],
      'handle': 'johnsoncynthia',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
      'primary_group': 'technicians',
      'username': 'johnsoncynthia',
    },
  ]
---
# name: test_update[uvloop-permissions][json]
  <class 'dict'> {
    'id': 'foo',
    'name': 'Initial',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
